# PracticaSyL

./: backup.yml  docker-compose.yml  informe_seguridad.md  sdkconfig  sdkconfig.old
certs/: server.key  server.pem  server_coap.pem  server_mqtt_key.pem
components/coap_tb/: CMakeLists.txt  Kconfig.projbuild  coap_tb.c  coap_tb.h
components/collect_data/: CMakeLists.txt  collect_data.c  collect_data.h
components/manage_nvs/: CMakeLists.txt  manage_nvs.c  manage_nvs.h
components/mqtt_tb/: CMakeLists.txt  Kconfig.projbuild  mqtt_tb.c  mqtt_tb.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
proto/: telemetry.pb.c  telemetry.pb.h  telemetry.proto
